W04 Picture Album Ehnacement

--- a/week03/design.html
+++ b/week03/design.html
@@ -3,33 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Design Starter</title>
+    <title>Design Project</title>
     <link rel="stylesheet" href="styles/design.css">
 </head>
 <body>
-    <div class="banner">
-        <h1>Welcome to My Design by Margaret Cabuenas</h1>
+    <div class="callout">
+        <h2>Callout Heading</h2>
+        <p>Callout text...</p>
     </div>
     <main>
-        <h2>Two Column Layout</h2>
         <article>
-            <p>This is an example of a two-column layout using CSS Grid.</p>
+            <h2>Main Article Heading</h2>
+            <p>Article content...</p>
         </article>
-        <aside>
-            <ul>
-                <li>Item 1</li>
-                <li>Item 2</li>
-                <li>Item 3</li>
-            </ul>
-        </aside>
+        <ol>
+            <li>List item 1</li>
+            <li>List item 2</li>
+            <li>List item 3</li>
+        </ol>
     </main>
-    <div class="callout">
-        <h3>Special Announcement</h3>
-        <p>This is an important message.</p>
+    <div class="banner">
+        <!-- Banner content -->
     </div>
     <footer>
-        <p>&copy; 2024 Margaret  Cabuenas</p>
+        Footer content...
     </footer>
 </body>
-
 </html>
