W04 checking for HTML warning

--- a/filtered-temples.html
+++ b/filtered-temples.html
@@ -26,6 +26,7 @@
     <main>
         <h2>Current Menu Selection</h2>
         <section class="gallery" id="temple-gallery">
+            <h3>Temple Gallery</h3>
             <!-- Temple figures will be dynamically generated -->
         </section>
     </main>
