W05 Site Plan update

--- a/project/siteplan.html
+++ b/project/siteplan.html
@@ -9,6 +9,16 @@
 <body>
     <header>
         <h1>Site Plan for MBC Transformer Manufacturer Incorporated</h1>
+        <nav>
+            <ul>
+                <li><a href="#site-name">Site Name</a></li>
+                <li><a href="#site-purpose">Site Purpose</a></li>
+                <li><a href="#scenarios">Scenarios</a></li>
+                <li><a href="#color-schema">Color Schema</a></li>
+                <li><a href="#typography">Typography</a></li>
+                <li><a href="#wireframe">Wireframes</a></li>
+            </ul>
+        </nav>
     </header>
     <main>
         <section id="site-name">
@@ -33,15 +43,14 @@
         <section id="color-schema">
             <h2>Color Schema</h2>
             <div class="color-row">
-                <div class="color-box" style="background-color: #4E598C;">
-                    <span class="color-label">Primary Color: #4E598C</span>
-                </div>
-                <div class="color-box" style="background-color: #FF8C42;">
-                    <span class="color-label">Secondary Color: #FF8C42</span>
-                </div>
-                <div class="color-box" style="background-color: #ADD8E6;">
-                    <span class="color-label">Tertiary Color: #ADD8E6</span>
-                </div>
+                <div class="color-box" style="background-color: #4E598C;"></div>
+                <div class="color-box" style="background-color: #FF8C42;"></div>
+                <div class="color-box" style="background-color: #ADD8E6;"></div>
+            </div>
+            <div class="color-labels">
+                <span class="color-label">Primary Color: #4E598C</span>
+                <span class="color-label">Secondary Color: #FF8C42</span>
+                <span class="color-label">Tertiary Color: #ADD8E6</span>
             </div>
         </section>
 
