--- a/project/index.html
+++ b/project/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <img src="images/logo.png" alt="MBC Transformer Logo" class="logo">
+        <img src="images/logo.webp" alt="MBC Transformer Logo" class="logo">
         <h1>MBC Transformer Manufacturer Incorporated</h1>
         <nav>
             <ul>
