--- a/project/index.html
+++ b/project/index.html
@@ -32,20 +32,13 @@
         </section>
         <section id="about-us">
             <h2>Unleash the Potential: We're the Transformer People</h2>
-            <p>At MBC Transformer, we're not just building transformers, we're building the future of efficient power distribution. As leading transformer manufacturers, we've been at the forefront of innovation for [Number] years, crafting reliable and adaptable transformers for a diverse range of applications.</p>
+            <p>At MBC Transformer, we're not just building transformers, we're building the future of efficient power distribution. As leading transformer manufacturers, we've been at the forefront of innovation for 20 years, crafting reliable and adaptable transformers for a diverse range of applications.</p>
             <h3>Why Choose Us?</h3>
             <ul>
                 <li><strong>Unmatched Expertise:</strong> Our team of engineers boasts a combined experience of 20 years in the industry, ensuring every transformer we create is built to the highest standards.</li>
                 <li><strong>Unwavering Quality:</strong> From meticulous material selection to rigorous testing procedures, we prioritize quality at every stage of production.</li>
                 <li><strong>Unbeatable Efficiency:</strong> Our transformers are designed to optimize energy consumption, saving you money and minimizing environmental impact.</li>
                 <li><strong>Unparalleled Versatility:</strong> Whether you need a custom-engineered power transformer or a high-performance distribution model, we offer a comprehensive range of solutions.</li>
-            </ul>
-            <h3>More Than Just Transformers</h3>
-            <p>We understand the complexities of modern electrical systems. That's why we go beyond simply manufacturing transformers. We provide:</p>
-            <ul>
-                <li><strong>Expert Consultation:</strong> Our team can help you select the perfect transformer for your specific needs and project requirements.</li>
-                <li><strong>Technical Support:</strong> We offer comprehensive technical support to ensure your transformers operate at peak performance throughout their lifespan.</li>
-                <li><strong>Educational Resources:</strong> We're committed to empowering our customers. Explore our library of resources to gain valuable insights into the world of transformers.</li>
             </ul>
             <section id="transformers">
                 <h2>Transformers We Offer</h2>
